@@ -5,6 +5,7 @@
 === 1.0.26 ===
 * Added audio pre-mixing controls.
 * Added left/right and mid/side linking in the UI.
+* Updated build scripts and dependencies.
 
 === 1.0.25 ===
 * Updated build scripts and dependencies.
